Fix Google map bleeding off right edge and creating horizontal scroll. Misc margin adjustments.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     max-width: 62.5em;
     border:1px solid #336a7e;
 }
+#page > section {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
 
 .logo {
     margin-top:10px;
@@ -83,7 +87,15 @@ body {
     background-color: #93cade;
     color:#fff;
 }
-
+#google-map{
+    width: 100%;
+}
+ul{
+    margin-left: 1.5em;
+}
+#main-nav ul{
+    margin-left: 0;
+}
 h2 {
     color:#639aae;
     border-bottom: 1px solid #ccc;
@@ -99,4 +111,6 @@ h2 {
 
 footer {
     clear:both;
+    padding-right: 1em;
+    padding-left: 1em;
 }
